css/style.css
/* ... */
    #colorlib-hero .flexslider .flex-direction-nav {
      display: none; }
    #colorlib-hero .flexslider .slider-text {
      display: table;
      opacity: 0;
      min-height: 500px;
      z-index: 9; }
      #colorlib-hero .flexslider .slider-text > .slider-text-inner {
        display: table-cell;
        vertical-align: middle;
        min-height: 700px;
        padding: 2.5em;
        position: relative; }
        @media screen and (max-width: 768px) {
          #colorlib-hero .flexslider .slider-text > .slider-text-inner {
            text-align: center; } }
        #colorlib-hero .flexslider .slider-text > .slider-text-inner h1, #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
          margin: 0;
          padding: 0;
          color: black;
          font-family: "Playfair Display", Georgia, serif; }
        #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
          margin-bottom: 20px;
          font-size: 60px;
          line-height: 1.3;
          font-weight: 700; }
          @media screen and (max-width: 768px) {
            #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
              font-size: 28px; } }
        #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
          font-size: 18px;
          line-height: 1.5;
          margin-bottom: 30px;
          font-weight: 300;
          font-family: "Quicksand", Arial, sans-serif; }
          #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 a {
            color: rgba(44, 152, 240, 0.8);
            border-bottom: 1px solid rgba(44, 152, 240, 0.7); }
        #colorlib-hero .flexslider .slider-text > .slider-text-inner .heading-section {
          font-size: 50px; }
          @media screen and (max-width: 768px) {
            #colorlib-hero .flexslider .slider-text > .slider-text-inner .heading-section {
              font-size: 30px; } }
        #colorlib-hero .flexslider .slider-text > .slider-text-inner s
.colorlib-lead {
          font-size: 20px;
          color: #fff; }
        #colorlib-hero .flexslider .slider-text > .slider-text-inner p {
          margin-bottom: 0; }
        #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn {
          font-size: 12px;
          text-transform: uppercase;
          letter-spacing: 2px;
          color: #000;
          padding: 10px 15px !important;
          border: none;
          font-weight: 400; }
          #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn {
            color: #000;
            border: 1px solid #000;
            background: transparent !important; }
            #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn:hover {
              background: transparent !important;
              border: 1px solid #000 !important; }
          @media screen and (max-width: 768px) {
            #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn {
              width: 100%; } }

body.offcanvas {
  overflow-x: hidden; }
  body.offcanvas #colorlib-aside {
    -moz-transform: translateX(0);
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    -o-transform: translateX(0);
    transform: translateX(0);
    width: 300px;
    background: #f2f3f7;
    z-index: 999;
    position: fixed; }
  body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
    top: 0;
    -moz-transform: translateX(300px);
    -webkit-transform: translateX(300px);
    -ms-transform: translateX(300px);
    -o-transform: translateX(300px);
    transform: translateX(300px); }

.colorlib-narrow-content {
  padding: 0 2.5em; }
  @media screen and (max-width: 768px) {
    .colorlib-narrow-content {
      padding: 0; } }

.no-gutters {
  margin: 0;
  padding: 0; }

.colorlib-experience,
.colorlib-skills,
.colorlib-education,
.colorlib-blog,
.colorlib-work,
.colorlib-about,
.colorlib-services,
.colorlib-contact {
  padding-top: 4em;
  padding-bottom: 9em;
  clear: both;
  width: 100%;
  display: block; }
  @media screen and (max-width: 768px) {
    .colorlib-experience,
    .colorlib-skills,
    .colorlib-education,
    .colorlib-blog,
    .colorlib-work,
    .colorlib-about,
    .colorlib-services,
    .colorlib-contact {
      padding-top: 5em;
      padding-bottom: 8em; } }

.author-img {
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  position: relative; }

.colorlib-heading {
  font-size: 18px;
  margin-bottom: 4em;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 5px;
  line-height: 1.8;
  position: relative; }
  .colorlib-heading span {
    display: block; }
  @media screen and (max-width: 768px) {
    .colorlib-heading {
      margin-bottom: 3em; } }

.heading-meta {
  margin-bottom: 15px;
  display: block;
  font-size: 10px;
  text-transform: uppercase;
  color: #999999;
  font-weight: 500;
  letter-spacing: 5px; }

.about-img {
  width: 100%;
  height: 600px;
  margin-bottom: 30px; }

.about-desc h3 {
  font-size: 18px;
  text-transform: uppercase;
  letter-spacing: 5px;
  font-weight: 500; }

.hire {
  padding: 2em;
  background: #f9bf3f; }
  .hire h2 {
    line-height: 1.5; }
  .hire .btn-hire {
    color: #000;
    text-transform: uppercase;
    letter-spacing: 1px;
    bordeR: 1px solid #000;
    padding: 2px 10px; }

.fancy-collapse-panel .panel-default > .panel-heading {
  padding: 0; }

.panel-heading a {
  padding: 20px 25px;
  display: block;
  width: 100%;
  font-weight: 500;
  font-size: 14px;
  letter-spacing: 1px;
  text-transform: uppercase;
  font-family: "Quicksand", Arial, sans-serif;
  background-color: #2c98f0;
  color: #fff;
  position: relative;
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  -ms-box-shadow: none !important;
  -o-box-shadow: none !important;
  box-shadow: none !important; }
/* ... */

